# github-dagger-workflow-project

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pipeline.go  pipeline_test.go  pyproject.toml  requirements.txt
.github/workflows/: log_and_test_action.yml  pipeline_unit_test.yml  tag_version.yml  test_action.yml  unit_test.yml  workaround.yml
github-dagger-workflow-project/: __init__.py  dataset.py  features.py  full_script.py  plots.py
github-dagger-workflow-project/modeling/: predict.py  train.py
github_dagger_workflow_project/: 01_data_transformations.py  02_model_training.py  03_model_selection.py  04_prod_model.py  05_model_deployment.py  __init__.py  config.py  data_transformations.py  dataset.py  full_script.py  mlflow_client.py  model_deployment.py  model_inference.py  model_selection.py  model_training.py  pipeline_utils.py  plots.py  prod_model.py  test.py  utils.py
github_dagger_workflow_project/artifacts/: raw_data.csv.dvc
github_dagger_workflow_project/daggerpipeline/: pipeline.go
github_dagger_workflow_project/modeling/: predict.py  train.py
github_dagger_workflow_project/scripts/: features.py
github_dagger_workflow_project/tests/: verify_artifacts.py
pipeline_deps/: requirements.txt
references/: README.md  problem_specification.md  project_reflections.md  subjective_code_practices_mpj.md
tests/: verify_artifacts.py
