[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="github_dagger_workflow_project"
description="A project to demonstrate the Dagger workflow"
version="0.0.1"

requires-python = "==3.11.9"

[tool.ruff.format]
exclude = ['.git', '.venv']

[tool.ruff.lint.isort]
known-first-party = ["github_dagger_workflow_project"]
force-sort-within-sections = true

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = ['.git', '.venv']

[tool.ruff.lint]
ignore = [
  "D100",   # undocumented-public-module
  "D104",   # undocumented-public-package
  "D105",   # undocumented-magic-method
  "D107",   # undocumented-public-init
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link

  # Added to solve the compatibility errors
  "D203",   # one-blank-line-before-class
  "D212",   # multi-line-summary-first-line
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
]



